# serializer version: 1
# name: test_run_answer_key_using_csv
  dict({
    'Manual/ErrorFiles.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5"
  
    ''',
    'Manual/MultiMarkedFiles.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5"
  
    ''',
    'Results/Results_05AM.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5"
      "adrian_omr.png","samples/3-answer-key/using-csv/adrian_omr.png","outputs/3-answer-key/using-csv/CheckedOMRs/adrian_omr.png","5.0","C","E","A","B","B"
  
    ''',
  })
# ---
# name: test_run_bonus_marking
  dict({
    'Manual/ErrorFiles.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11"
  
    ''',
    'Manual/MultiMarkedFiles.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11"
  
    ''',
    'Results/Results_05AM.csv': '''
      "file_id","input_path","output_path","score","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11"
      "IMG_20201116_143512.jpg","samples/3-answer-key/bonus-marking/IMG_20201116_143512.jpg","outputs/3-answer-key/bonus-marking/CheckedOMRs/IMG_20201116_143512.jpg","33.0","B","D","C","B","D","C","BC","A","C","D","C"
      "IMG_20201116_150717658.jpg","samples/3-answer-key/bonus-marking/IMG_20201116_150717658.jpg","outputs/3-answer-key/bonus-marking/CheckedOMRs/IMG_20201116_150717658.jpg","33.0","B","D","C","B","D","C","BC","A","C","D","C"
      "IMG_20201116_150750830.jpg","samples/3-answer-key/bonus-marking/IMG_20201116_150750830.jpg","outputs/3-answer-key/bonus-marking/CheckedOMRs/IMG_20201116_150750830.jpg","6.0","A","","D","C","AC","A","D","B","C","D","D"
  
    ''',
  })
# ---
# name: test_run_omr_marker_mobile
  dict({
    'MobileCamera/Manual/ErrorFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20"
  
    ''',
    'MobileCamera/Manual/MultiMarkedFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20"
  
    ''',
    'MobileCamera/Results/Results_05AM.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20"
      "sheet1.jpg","samples/1-mobile-camera/MobileCamera/sheet1.jpg","outputs/1-mobile-camera/MobileCamera/CheckedOMRs/sheet1.jpg","0","E503110026","B","","D","B","6","11","20","7","16","B","D","C","D","A","D","B","A","C","C","D"
  
    ''',
  })
# ---
# name: test_run_omr_marker_scanned
  dict({
    'ScanBatch1/Manual/ErrorFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
  
    ''',
    'ScanBatch1/Manual/MultiMarkedFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
  
    ''',
    'ScanBatch1/Results/Results_05AM.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
      "camscanner-1.jpg","samples/2-omr-marker-scanned/ScanBatch1/camscanner-1.jpg","outputs/2-omr-marker-scanned/ScanBatch1/CheckedOMRs/camscanner-1.jpg","-4.0","E204420102","D","C","A","C","B","08","52","21","85","36","B","C","A","A","D","C","C","AD","A","A","D",""
  
    ''',
    'ScanBatch2/Manual/ErrorFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
  
    ''',
    'ScanBatch2/Manual/MultiMarkedFiles.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
  
    ''',
    'ScanBatch2/Results/Results_05AM.csv': '''
      "file_id","input_path","output_path","score","Roll","q1","q2","q3","q4","q5","q6","q7","q8","q9","q10","q11","q12","q13","q14","q15","q16","q17","q18","q19","q20","q21","q22"
      "camscanner-2.jpg","samples/2-omr-marker-scanned/ScanBatch2/camscanner-2.jpg","outputs/2-omr-marker-scanned/ScanBatch2/CheckedOMRs/camscanner-2.jpg","55.0","E204420109","C","C","B","C","C","01","19","10","10","18","D","A","D","D","D","C","C","C","C","D","B","A"
  
    ''',
  })
# ---
